--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.66MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-164.6KB/s(Youtube:不良林), server: scloud55.jafiyun.life, port: 22055, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud55.jafiyun.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-426.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-525.7KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-14.11MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-884.0KB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-755.8KB/s(Youtube:不良林), server: scloud57.jafiyun.life, port: 22057, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud57.jafiyun.life, skip-cert-verify: true}
   - {name: 🇨🇳 中国-356.9KB/s(Youtube:不良林), server: scloud51.jafiyun.life, port: 22051, type: trojan, password: 63d7b7bb-e526-3ea5-a61f-9da6df645da0, sni: scloud51.jafiyun.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-521.6KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-336.0KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-436.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇳🇱 荷兰-1.58MB/s(Youtube:不良林), server: 213.183.59.214, port: 9058, type: ss, cipher: aes-256-cfb, password: dML2sfhbVwvtfNPe}
+  - {name: 🇳🇱 荷兰-1.49MB/s(Youtube:不良林), server: 213.183.59.214, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 🇫🇷 法国-1.25MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇸🇬 新加坡-1.20MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-164.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-755.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-356.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-336.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-436.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-164.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-755.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-356.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-336.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-436.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-164.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-755.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-356.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-336.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-436.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-164.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-755.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-164.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-755.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-356.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-336.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-436.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-164.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-755.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-356.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-336.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-436.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-164.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-755.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-356.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-336.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-436.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇭🇰 香港-164.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-426.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-525.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-884.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇭🇰 香港-755.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-356.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-521.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇩🇪 德国-336.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-436.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.58MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.25MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
