--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-591.7KB/s(Youtube:不良林), server: 213.183.53.208, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇳 中国-13.97MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇬🇧 英国-2.62MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.74MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇯🇵 日本-5.02MB/s(Youtube:不良林), server: vjp3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp3.0bad.com}}
-  - {name: 🇯🇵 日本-7.20MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.05MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.95MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林), server: 213.183.53.177, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林), server: 213.183.53.177, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 台湾-13.66MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-5.59MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-14.10MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-362.7KB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.71MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-591.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-591.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-591.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-591.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-591.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-591.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-591.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.97MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.74MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-7.20MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.95MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.66MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.59MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-14.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.71MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
